--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ function multiples(){
 
 <h3>Intermediate</h3>
 
-<script src='http://d3js.org/d3.v3.min.js' charset='utf-8'></script>
+<script src='https://d3js.org/d3.v3.min.js' charset='utf-8'></script>
 
 <script type='text/javascript' charset='utf-8'></script>
 
